package Model;

public class CaesarCipher{
  private String text;
  private char[] key;

  public CaesarCipher(String text, char[] key) throws Exception{
    this.text = text;    
  }

}
