@startuml cesar
skinparam groupInheritance 2

class CaesarCipher{
  +static string encrypt(string text, int key)
  +static string desencrypt(string textEncrypted, int clave)
}

class CaesarAttack{
  -char[2] : createRandomKey()
  +string[] getTextsProbable(int limit)
}

' Una clase que se encarga de las operaciones sobre archivos, en este caso sólo escritura y lectura
class FileService {
  + static string readFile(string path)
  + static void writeTxt(string path, string text)
}

FileService <.. CaesarCipher
FileService <.. CaesarAttack
CaesarCipher <.. CaesarAttack
@enduml